opensearch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: os-ingress
  namespace: opensearch
#  annotations:
#    cert-manager.io/cluster-issuer: "ca-issuer"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - os.k8s.local
#      secretName: rancher-dashboard-cert
  rules:
    - host: os.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  my-cluster
                port:
                  number: 9200
